tests/neg-custom-args/fatal-warnings/i4986b.check
-- [E158] Reference Error: tests/neg-custom-args/fatal-warnings/i4986b.scala:3:65 --------------------------------------
3 |@implicitNotFound(msg = "Cannot construct a collection of type ${Too} with elements of type ${Elem} based on a collection of type ${From}.") // error // error
  |                                                                 ^
  |                                      Invalid reference to a type variable `Too` found in the annotation argument.
  |                                      The variable does not occur as a parameter in the scope of type `Meh`.
-- [E158] Reference Error: tests/neg-custom-args/fatal-warnings/i4986b.scala:3:94 --------------------------------------
3 |@implicitNotFound(msg = "Cannot construct a collection of type ${Too} with elements of type ${Elem} based on a collection of type ${From}.") // error // error
  |                                                                                              ^
  |                                     Invalid reference to a type variable `Elem` found in the annotation argument.
  |                                     The variable does not occur as a parameter in the scope of type `Meh`.
-- [E158] Reference Error: tests/neg-custom-args/fatal-warnings/i4986b.scala:6:71 --------------------------------------
6 |@implicitNotFound(msg = "Cannot construct a collection of type ${To} ${Elem}.") // error
  |                                                                       ^
  |                                     Invalid reference to a type variable `Elem` found in the annotation argument.
  |                                     The variable does not occur as a parameter in the scope of type `Meh2`.
-- [E158] Reference Error: tests/neg-custom-args/fatal-warnings/i4986b.scala:9:46 --------------------------------------
9 |class C[T](implicit @implicitNotFound("No C[${t}] available") t: T) // error
  |                                              ^
  |                                Invalid reference to a type variable `t` found in the annotation argument.
  |                                The variable does not occur as a parameter in the scope of the constructor of `C`.
-- [E158] Reference Error: tests/neg-custom-args/fatal-warnings/i4986b.scala:12:54 -------------------------------------
12 |  def m[Aaa](implicit @implicitNotFound("I see no C[${Uuh}]") theC: C[Aaa]) = ??? // error
   |                                                      ^
   |                                    Invalid reference to a type variable `Uuh` found in the annotation argument.
   |                                    The variable does not occur as a parameter in the scope of method `m`.
-- [E158] Reference Error: tests/neg-custom-args/fatal-warnings/i4986b.scala:18:73 -------------------------------------
18 |    def m[S](implicit @implicitNotFound("${X} ${Y} ${ Z } ${R} ${S} -- ${XX} ${ZZ} ${ Nix }") i: Int) = ??? // error // error // error
   |                                                                         ^
   |                                     Invalid reference to a type variable `XX` found in the annotation argument.
   |                                     The variable does not occur as a parameter in the scope of method `m`.
-- [E158] Reference Error: tests/neg-custom-args/fatal-warnings/i4986b.scala:18:79 -------------------------------------
18 |    def m[S](implicit @implicitNotFound("${X} ${Y} ${ Z } ${R} ${S} -- ${XX} ${ZZ} ${ Nix }") i: Int) = ??? // error // error // error
   |                                                                               ^
   |                                     Invalid reference to a type variable `ZZ` found in the annotation argument.
   |                                     The variable does not occur as a parameter in the scope of method `m`.
-- [E158] Reference Error: tests/neg-custom-args/fatal-warnings/i4986b.scala:18:86 -------------------------------------
18 |    def m[S](implicit @implicitNotFound("${X} ${Y} ${ Z } ${R} ${S} -- ${XX} ${ZZ} ${ Nix }") i: Int) = ??? // error // error // error
   |                                                                                      ^
   |                                    Invalid reference to a type variable `Nix` found in the annotation argument.
   |                                    The variable does not occur as a parameter in the scope of method `m`.
